[project]
name = "deploy"
version = "0.0.2"
description = "Quickly deploy a web server to a remote machine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "paramiko>=4.0.0",
]

[project.scripts]
deploy = "main:main"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

# Configuring Ruff: https://docs.astral.sh/ruff/configuration/
[tool.ruff] # https://docs.astral.sh/ruff/settings/
line-length = 99
fix = true

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
# Rules: https://docs.astral.sh/ruff/rules/
extend-select = ["I"]

[tool.ruff.lint.isort] # https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true # prevents merge conflicts
lines-after-imports = 2
